<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
        <!ELEMENT resources (string)*>
        <!ELEMENT string (#PCDATA)>
        <!ATTLIST string
                name CDATA #REQUIRED>
        ]>
<resources>
    <string name="app_name">Public monitoring</string>
    <string name="type_termometr">Temperature</string>
    <string name="type_pressure">Pressure</string>
    <string name="type_humidity">Humidity</string>
    <string name="type_unknown">unknown</string>
    <string name="text_distance">Distance:</string>
    <string name="text_km">km</string>
    <string name="text_type">Type:</string>
    <string name="text_lastupdate">Last update:</string>
    <string name="menu_text_quit">quit</string>
    <string name="menu_text_preference">Preference</string>
    <string name="pref_user_settings">User settings</string>
    <string name="pref_key_login">key_login</string>
    <string name="pref_key_digits_amount">key_widget_digits_after_point</string>
    <string name="pref_key_passwd">key_passwd</string>
    <string name="pref_key_geoloc">key_geoloc</string>
    <string name="local_service_started">Narodmon Alarm</string>
    <string name="pref_key_interval">key_update_interval</string>
    <string name="text_id">ID:</string>
    <string name="text_password">Password</string>
    <string name="text_Enter_password">Enter password</string>
    <string name="text_Options">Options</string>
    <string name="text_Sensor_update_interval">Sensor update interval</string>
    <string name="text_Select_update_interval">Select sensor value update interval</string>
    <string name="text_Place">Place (if no navigation)</string>
    <string name="text_Russia_novosibirsk">Russia, Moscow</string>
    <string name="text_Enter_your_place">Enter your place</string>
    <string name="text_Login_or_email">Login (or email)</string>
    <string name="text_login_or_email_summ">login or email on narodmon.ru</string>
    <string name="text_Enter_Login">Enter login</string>
    <string name="text_sec">sec</string>
    <string name="text_min">min</string>
    <string name="text_hr">hr</string>
    <string name="text_days">days</string>
    <string name="text_ago">ago</string>
    <string name="text_show">Show:</string>
    <string name="text_all">All</string>
    <string name="text_my">My only</string>
    <string name="text_filte_type">Type:</string>
    <string name="text_sort_by">Sort by:</string>
    <string name="text_by_name">Name</string>
    <string name="text_by_distance">Distance</string>
    <string name="pref_key_use_geocode">pref_key_use_geoloc</string>
    <string name="text_dont_use_navig_summary">Use address string below instead navigation</string>
    <string name="text_dont_use_navigation_checkbox">Don\'t use gps location</string>
    <string name="app_version_name">2.56</string>
    <string name="text_notify_more_than">more than</string>
    <string name="text_notify_less_than">less than</string>
    <string name="text_notify_within">within</string>
    <string name="text_radius">Show sensors in radius, km</string>
    <string name="text_filter_dialog_title">Filtering</string>
    <string name="text_alarm_disabled">Alarm disabled</string>
    <string name="text_alarm_enabled">Alarm enabled</string>
    <string name="text_today">Today, h</string>
    <string name="text_alarm_setup_titel">Alarm setup</string>
    <string name="alarm_info_text_1">For enable alarms, select alarm type</string>
    <string name="alarm_info_text_2">Alarm occurs when the value is above the limit</string>
    <string name="alarm_info_text_3">Alarm occurs when the value is below the limit</string>
    <string name="alarm_info_text_4">Alarm occurs when the value out of limits</string>
    <string name="alarm_info_text_5">Alarm occurs when the value within limits</string>
    <string name="alarm_info_type">Alarm type</string>
    <string name="alarm_info_hi_level">Hight limit</string>
    <string name="alarm_info_low_level">Low limit</string>
    <string name="alarm_info_current_value">Current value:</string>
    <string name="alarm_dialog_accept_btn">Accept</string>
    <string name="menu_settings_text">Settings</string>
    <string name="menu_text_filter">Filter</string>
    <string name="menu_refresh_text">Refresh</string>
    <string name="btn_month_text">month</string>
    <string name="btn_week_text">week</string>
    <string name="btn_day_text">day</string>
    <string name="login_dialog_logout_text">Logout</string>
    <string name="login_dialog_auto_text">login at start</string>
    <string name="login_dialog_password_text">password</string>
    <string name="login_dialog_login_text">login</string>
    <string name="login_dialog_title">Authorisation</string>
    <string name="menu_autorisation_name">Authorisation</string>
    <string name="login_dialog_you_login_as_text">You login as:</string>
    <string name="login_dialog_logout_btn_text">Logout</string>
    <string name="pref_key_autologin">pref_key_autologin</string>
    <string name="login_dialog_youarelogin">You are login</string>
    <string name="login_dialog_youarenotlogin">You are not login</string>
    <string name="login_dialog_autherror">Authorisation error</string>
    <string name="login_dialog_button_logout_text">Logout</string>
    <string name="login_dialog_button_login_text">Login</string>
    <string name="menu_helppage_text">Help page</string>
    <string name="text_by_type">type</string>
    <string name="text_by_time">time</string>
    <string name="text_days_ago">days ago</string>
    <string name="text_this_week">this week</string>
    <string name="text_weeks_ago">weeks ago</string>
    <string name="text_this_month">this month</string>
    <string name="text_month_ago">months ago</string>
    <string name="text_this_year">this year</string>
    <string name="text_yars_ago">years ago</string>
    <string name="text_select_clear">none</string>
    <string name="text_select_all">all</string>
    <string name="empty_watched_msg">There are no watched sensors. To add sensor, press \'star\' in sensor info screen.
    </string>
    <string name="empty_my_list">There are no Your sensors. Connect your sensor to http://narodmon.ru and login.
    </string>
    <string name="select_sensor_text">Select sensor</string>
    <string name="enter_widget_name_text">Enter widget name:</string>
    <string name="widget_label">Public monitoring</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="text_notify_alarm">Alarm</string>
    <string name="alarm_name">Name</string>
    <string name="api_url">http://narodmon.ru/api.php</string>
    <string name="key_widget_light_theme">key_widget_light_theme</string>
    <string name="app_widget_theme_light">Light app widget theme</string>
    <string name="more_button_text">More..</string>
    <string name="menu_watched_text">Watched</string>
    <string name="menu_my_text">My</string>
    <string name="menu_alarm_text">Alarms</string>
    <string name="menu_all_text">All</string>
    <string name="empty_alarm_list">No alarm was added yet, you can add it on sensor screen.</string>
    <string name="empty_sensor_list">There are no sensor, check filters, check connection, try later.</string>
    <string name="text_digits_amount">Widgets value rounding</string>
    <string name="text_select_digits_amount">Select number of decimal digit after point</string>
    <string name="empty_sensor_for_widget_message">No sensor collected! Please launch application and get sensor list before add widgets</string>

</resources>
