<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_user_settings">
        <EditTextPreference
                android:id="@+id/login_pref"
                android:key="@string/pref_key_login"
                android:title="@string/text_Login_or_email"
                android:summary="@string/text_login_or_email_summ"
                android:dialogTitle="@string/text_Enter_Login" />
        <EditTextPreference
                android:id="@+id/passwd_pref"
                android:key="@string/pref_key_passwd"
                android:title="@string/text_password"
                android:summary=""
                android:inputType="textPassword"
                android:dialogTitle="@string/text_Enter_password" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/text_Options">
        <ListPreference
                android:title="@string/text_Sensor_update_interval"
                android:key="@string/pref_key_interval"
                android:summary="@string/text_Select_update_interval"
                android:defaultValue="5"
                android:entries="@array/listArray"
                android:entryValues="@array/listValues" />
        <CheckBoxPreference
                android:title="@string/text_dont_use_navigation_checkbox"
                android:id="@+id/use_geoloc"
                android:key="@string/pref_key_use_geocode"
                android:summary="@string/text_dont_use_navig_summary"
                android:defaultValue="false"
                />
        <EditTextPreference
                android:id="@+id/geolocation_pref"
                android:key="@string/pref_key_geoloc"
                android:title="@string/text_Place"
                android:summary="@string/text_Russia_novosibirsk"
                android:dialogTitle="@string/text_Enter_your_place" />


        <!--CheckBoxPreference
                android:key="checkbox_preference"
                android:title="titel2"
                android:summary="summary2" /-->

    </PreferenceCategory>

    <!--PreferenceCategory
            android:title="Application">

        <EditTextPreference
                android:key=""
                android:title="title4"
                android:summary="summary4"
                android:dialogTitle="dialogTitle4" />

    </PreferenceCategory-->

</PreferenceScreen>
