<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_refresh"
          android:title="Refresh"
          android:icon="@drawable/ic_menu_refresh"
          android:onClick="onUpdateBtnPress"
          android:showAsAction="always"/>
    <item android:id="@+id/item1"
          android:title="@string/menu_text_filter"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          android:showAsAction="always"
          android:onClick="showFilterDialog"
          />
<group android:id="@+id/group">
    <item android:id="@+id/menu_login"
          android:title="@string/menu_autorisation_name"
            />
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings_text"
            />
    <item android:id="@+id/menu_help"
          android:title="@string/menu_helppage_text"
            />
</group>
</menu>