<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:baselineAligned="false">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/info_sensor_icon"
            android:layout_gravity="center"
            android:paddingRight="5dp"
            android:scaleType="fitStart" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:id="@+id/value_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_value"
                android:textSize="30dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:id="@+id/text_name"
                android:textSize="25sp"
                android:ellipsize="marquee"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:id="@+id/text_location"
                android:ellipsize="marquee"
                android:singleLine="true" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_gravity="left|center_vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_distance"
                    android:id="@+id/textView2"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="31"
                    android:id="@+id/text_distance"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_km"
                    android:id="@+id/textView4" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_type"
                    android:id="@+id/textView5"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Termometr"
                    android:id="@+id/text_type" />

            </LinearLayout>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/text_lastupdate"-->
                <!--android:id="@+id/textView"-->
                <!--android:layout_marginRight="10dp" />-->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_lastupdate"
                    android:id="@+id/textView"
                   />

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="time"-->
                    <!--android:id="@+id/text_time" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="agoTime"
                    android:id="@+id/text_ago"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ago"
                    android:id="@+id/textView6"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/series_info"
                android:singleLine="false"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">


        <com.ghelius.narodmon.MultitouchPlot
            android:id="@+id/plot1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            title="plot_title"
            renderMode="use_main_thread"/>
        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:id="@+id/sensorInfoChart" />-->

        <ProgressBar
            android:indeterminate="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/marker_progress"
            style="?android:attr/progressBarStyle"
            android:indeterminateBehavior="cycle"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="\u003c"
            android:id="@+id/bt_graph_prev" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_day_text"
            android:id="@+id/bt_graph_day" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_week_text"
            android:id="@+id/bt_graph_week" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_month_text"
            android:id="@+id/bt_graph_month" />

        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="\u003e"
            android:id="@+id/bt_graph_next" />
    </LinearLayout>
</LinearLayout>